@@ -1,6 +1,11 @@
 # ChangeLog for x11-proto/randrproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/randrproto/ChangeLog,v 1.53 2009/04/16 02:32:07 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/randrproto/ChangeLog,v 1.54 2009/04/29 09:59:12 remi Exp $
+
+*randrproto-1.3.0 (29 Apr 2009)
+
+  29 Apr 2009; Rémi Cardona <remi@gentoo.org> +randrproto-1.3.0.ebuild:
+  import 1.3.0 from the x11 overlay
 
   16 Apr 2009; Jeroen Roovers <jer@gentoo.org> randrproto-1.2.2.ebuild:
   Stable for HPPA (bug #251832).
